# wasm-interface-cli

./: .gitignore  Cargo.toml  README.md  wapm.toml
example_interfaces/: wasi_unstable.wai  wasi_unstable.wasm_interface
src/commands/: check.rs  mod.rs
